Responsive bug on iPhone 7 fixed.

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ html, body {
 
 header {
   position: fixed;
-  width: 100%;
+  width: 99%;
   height: 100px;
 
   display: flex;
@@ -67,6 +67,7 @@ header nav li a {
 .upper-section {
   margin-top: 0;
   height: 90vh;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
